transform via nested BEM

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,332 +1,33 @@
-.root {
-  background-color: #000000;
-  max-width: 1280px;
-  margin: 0 auto;
-}
-
-.page {
-    min-width: 320px;
-    margin: 0 auto;
-    padding: 28px 0 36px;
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    text-rendering: optimizeLegibility;
-  }
-
-@media screen and (min-width: 768px) {
-  .page {
-    min-width: 768px;
-    padding: 45px 0 60px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .page {
-    min-width: 1280px;
-  }
-}
-
-.header {
-  margin: 0 auto;
-  min-height: 56px;
-  border-bottom: 1px solid rgba(84, 84, 84, .7);
-}
-
-@media screen and (min-width: 768px) {
-  .header {
-    max-width: 880px;
-    min-height: 74px;
-  }
-}
-
-.header__logo {
-  background-image: url(../images/logo.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 103.74px;
-  height: 24.4px;
-  margin-left: 27px;
-}
-
-@media screen and (min-width: 768px) {
-  .header__logo {
-    margin-left: 34px;
-    width: 142px;
-    height: 33px;
-  }
-}
-
-@media screen and (min-width: 900px) {
-  .header__logo {
-    margin-left: 0;
-  }
-}
-
-.main {
-  max-width: 282px;
-  margin: 42px auto 48px;
-}
-
-@media screen and (min-width: 768px) {
-  .main {
-    max-width: 880px;
-    margin: 40px auto 67px;
-  }
-}
-
-.profile {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: #FFFFFF;
-  align-items: center;
-}
-
-@media screen and (min-width: 768px) {
-  .profile {
-    flex-direction: row;
-    height: 120px;
-    margin: 0 34px;
-  }
-}
-
-@media screen and (min-width: 900px) {
-  .profile {
-    margin: 0 auto;
-  }
-}
-
-.avatar {
-  background-image: url(../images/profile-avatar.jpeg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  height: 120px;
-  width: 120px;
-  border-radius: 50%;
-}
-
-.profile__info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 22.25px auto 0;
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .profile__info {
-    margin: 0 auto 0 30px;
-    width: fit-content;
-    align-items: flex-start;
-  }
-}
-
-.profile__first-line {
-  display: flex;
-  align-items: baseline;
-}
-
-.profile__title {
-  margin: 0;
-  font-weight: 500;
-  font-size: 27px;
-  line-height: 1.22;
-}
-
-@media screen and (min-width: 768px) {
-  .profile__title {
-    font-size: 42px;
-    line-height: 1.14;
-  }
-}
-
-/* ПОДВИНУТЬ КНОПКУ ВПРАВО ОТ ТАЙТЛА ЧТОБЫ ТАЙТЛ БЫЛ ОТЦЕНТРОВАН А КНОПКА НЕТ */
-.profile__edit {
-  width: 18px;
-  height: 18px;
-  background-image: url(../images/edit-button.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-color: transparent;
-  border: none;
-  margin-left: 10px;
-  padding: 0;
-  transition: .5s;
-}
-
-@media screen and (min-width: 768px) {
-  .profile__edit {
-    width: 24px;
-    height: 24px;
-    margin-left: 18px;
-  }
-}
-
-.profile__edit:hover {
-  opacity: .6;
-  cursor: pointer;
-}
-
-.profile__subtitle {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.21;
-  margin: 14px 0 0;
-}
-
-@media screen and (min-width: 768px) {
-  .profile__subtitle {
-    font-size: 18px;
-    line-height: 1.22;
-    margin: 16px 0 0;
-  }
-}
-
-.profile__add {
-  width: 282px;
-  height: 50px;
-  margin: 36px auto 0;
-  background-image: url(../images/add-button.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  transition: .5s;
-}
-
-@media screen and (min-width: 768px) {
-  .profile__add {
-    width: 150px;
-    height: 50px;
-    margin: 0;
-    background-image: url(../images/add-button-small.svg);
-  }
-}
-
-.profile__add:hover {
-  opacity: .6;
-  cursor: pointer;
-}
-
-.elements {
-  margin: 36px 0;
-}
-
-@media screen and (min-width: 768px) {
-  .elements {
-    margin: 51px 0;
-  }
-}
-
-.element__list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0 auto;
-  display: grid;
-  grid-template-rows: repeat(6, 1fr);
-  grid-template-columns: 282px;
-  row-gap: 20px;
-  justify-content: center;
-}
-
-@media screen and (min-width: 600px) {
-  .element__list {
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(2, 282px);
-    column-gap: 17px;
-  }
-}
-
-@media screen and (min-width: 900px) {
-  .element__list {
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(3, 282px);
-  }
-}
-
-.element {
-  width: 100%;
-  height: 361px;
-  background-color: #FFFFFF;
-  border-radius: 10px;
-  margin: 0;
-}
-
-.element__photo {
-  width: 282px;
-  height: 282px;
-  border-radius: 10px 10px 0 0;
-}
-
-.element__title-container {
-  display: flex;
-  justify-content: space-between;
-  margin: 25px 15px auto 21px;
-  align-items: baseline;
-}
-
-.element__title {
-  margin: 0;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 1.21;
-}
-
-.element__like {
-  background-image: url(../images/like.svg);
-  background-repeat: no-repeat;
-  background-color: transparent;
-  height: 19px;
-  width: 22px;
-  transition: .5s;
-  border: none;
-}
-
-.element__like:hover {
-  opacity: .5;
-  cursor: pointer;
-}
-
-.element__like:focus {
-  background-image: url(../images/like-active.png);
-  opacity: 1;
-}
-
-.footer {
-  max-width: 282px;
-  margin: 0 auto;
-}
-
-@media screen and (min-width: 600px) {
-  .footer {
-    max-width: calc(282px * 2 + 17px);
-    margin: 0 auto;
-  }
-}
-
-@media screen and (min-width: 900px) {
-  .footer {
-    max-width: calc(282px * 3 + 17px * 2);
-    margin: 0 auto;
-  }
-}
-
-.footer__content {
-  margin: 0;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.21;
-  color: #545454;
-}
-
-@media screen and (min-width: 900px) {
-  .footer__content {
-    font-size: 18px;
-    line-height: 1.22;
-  }
-}
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts/fonts.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/root/root.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/main/main.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__first-line/profile__first-line.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__edit/profile__edit.css);
+@import url(../blocks/profile/__job/profile__job.css);
+@import url(../blocks/profile/__add/profile__add.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__list/elements__list.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__photo/element__photo.css);
+@import url(../blocks/element/__title-container/element__title-container.css);
+@import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__content/footer__content.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/popup_opened.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__wrapper/popup__wrapper.css);
+@import url(../blocks/popup/__definition/popup__definition.css);
+@import url(../blocks/popup/__text/popup__text.css);
+@import url(../blocks/popup/__subtitle/popup__subtitle.css);
+@import url(../blocks/popup/__save/popup__save.css);
