--- a/blocks/element/__photo/element__photo.css
+++ b/blocks/element/__photo/element__photo.css
@@ -1,5 +1,6 @@
 .element__photo {
-    width: 282px;
-    height: 282px;
-    border-radius: 10px 10px 0 0;
+  display: block;
+  width: 282px;
+  height: 282px;
+  border-radius: 10px 10px 0 0;
   }
