--- a/blocks/popup/__wrapper/popup__wrapper.css
+++ b/blocks/popup/__wrapper/popup__wrapper.css
@@ -1,13 +1,11 @@
 .popup__wrapper {
-    width: 238px;
-    height: 272px;
+    max-width: 238px;
     margin: 25px auto;
   }
   
   @media screen and (min-width: 600px) {
     .popup__wrapper {
-      width: 358px;
-      height: 259px;
+      max-width: 358px;
       margin: 34px auto 37px;
     }
   }
