--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,3 +1,13 @@
 .popup {
     display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, .5);
+    min-width: 320px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: 1;
   }
