--- a/blocks/element/__like/element__like_active.css
+++ b/blocks/element/__like/element__like_active.css
@@ -1,16 +1,11 @@
-.element__like {
-    background-image: url(../../../images/like.svg);
+.element__like_active {
+    background-image: url(../../../images/like-active.png);
     background-repeat: no-repeat;
     background-color: transparent;
     background-size: contain;
     padding: 0;
     height: 19px;
     width: 22px;
-    transition: .2s;
     border: none;
   }
   
-  .element__like:hover {
-    opacity: .5;
-    cursor: pointer;
-  }
