--- a/blocks/element/__trash/element__trash.css
+++ b/blocks/element/__trash/element__trash.css
@@ -1,16 +1,20 @@
-.element__like {
-    background-image: url(../../../images/like.svg);
+.element__trash {
+    background-image: url(../../../images/trash.svg);
     background-repeat: no-repeat;
     background-color: transparent;
     background-size: contain;
+    position: absolute;
+    top: 20px;
+    right: 20px;
     padding: 0;
     height: 19px;
-    width: 22px;
+    width: 18px;
     transition: .2s;
     border: none;
   }
   
-  .element__like:hover {
-    opacity: .5;
+  .element__trash:hover {
+    opacity: .6;
     cursor: pointer;
   }
+  
