--- a/pages/index.css
+++ b/pages/index.css
@@ -16,10 +16,12 @@
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__list/elements__list.css);
 @import url(../blocks/element/element.css);
+@import url(../blocks/element/__trash/element__trash.css);
 @import url(../blocks/element/__photo/element__photo.css);
 @import url(../blocks/element/__title-container/element__title-container.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/element__like_active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__content/footer__content.css);
 @import url(../blocks/popup/popup.css);
@@ -30,3 +32,8 @@
 @import url(../blocks/popup/__definition/popup__definition.css);
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/__save/popup__save.css);
+@import url(../blocks/popup/__create/popup__create.css);
+@import url(../blocks/popup/popup_image.css);
+@import url(../blocks/popup/__image-container/popup__image-container.css);
+@import url(../blocks/popup/__image-item/popup__image-item.css);
+@import url(../blocks/popup/__image-name/popup__image-name.css);
