--- a/blocks/element/__like/_active/element__like_active.css
+++ b/blocks/element/__like/_active/element__like_active.css
@@ -1,5 +1,5 @@
 .element__like_active {
-    background-image: url(../../../images/like-active.png);
+    background-image: url(../../../../images/like-active.png);
     background-repeat: no-repeat;
     background-color: transparent;
     background-size: contain;
