пункт 4 стилизовала счетчик лайков

--- a/src/blocks/element/__title-container/element__title-container.css
+++ b/src/blocks/element/__title-container/element__title-container.css
@@ -1,6 +1,7 @@
 .element__title-container {
     display: flex;
     justify-content: space-between;
-    margin: 25px 20px;
-    align-items: baseline;
+    align-items: center;
+    margin: 0 20px;
+    height: 79px;
   }
