--- a/main.css
+++ b/main.css
@@ -6,7 +6,9 @@
 .header__logo{background-image:url(bbe2a6eafac19c3d031c.svg);background-repeat:no-repeat;background-size:contain;height:24.4px;margin-left:27px;width:103.74px}@media screen and (min-width:768px){.header__logo{height:33px;margin-left:34px;width:142px}}@media screen and (min-width:900px){.header__logo{margin-left:0}}
 .main{margin:42px auto 48px;max-width:282px}@media screen and (min-width:768px){.main{margin:40px auto 67px;max-width:880px}}
 .profile{align-items:center;color:#fff;display:flex;flex-direction:column;justify-content:space-between}@media screen and (min-width:768px){.profile{flex-direction:row;margin:0 34px}}@media screen and (min-width:900px){.profile{margin:0 auto}}
+.profile__avatar-wrapper{height:120px;position:relative;width:120px}
 .profile__avatar{background-image:url(41d09de2e96c52cbba9a.jpeg);background-repeat:no-repeat;background-size:contain;border-radius:50%;height:120px;width:120px}
+.profile__edit-avatar{background-image:url(93c771f5f8582261951d.png);background-position:50%;background-repeat:no-repeat;bottom:0;left:0;opacity:0;position:absolute;right:0;top:0;transition:all .5s}.profile__edit-avatar:hover{background-color:rgba(0,0,0,.8);cursor:pointer;opacity:1}
 .profile__info{align-items:center;display:flex;flex-direction:column;margin:22.25px auto 0;width:100%}@media screen and (min-width:768px){.profile__info{align-items:flex-start;margin:0 auto 0 30px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content}}
 .profile__first-line{align-items:baseline;display:flex;margin-left:28px}@media screen and (min-width:768px){.profile__first-line{margin-left:0}}
 .profile__name{font-size:27px;font-weight:500;line-height:1.22;margin:0;max-width:300px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (min-width:768px){.profile__name{font-size:42px;line-height:1.14}}
@@ -18,22 +20,26 @@
 .element{background-color:#fff;border-radius:10px;margin:0;position:relative;width:100%}
 .element__trash{background-color:transparent;background-image:url(823b0cf1b0b7e9cb7cad.svg);background-repeat:no-repeat;background-size:contain;border:none;height:19px;padding:0;position:absolute;right:20px;top:20px;transition:.2s;width:18px}.element__trash:hover{cursor:pointer;opacity:.6}
 .element__photo{border-radius:10px 10px 0 0;display:block;height:282px;width:282px}
-.element__title-container{align-items:baseline;display:flex;justify-content:space-between;margin:25px 20px}
+.element__title-container{align-items:center;display:flex;height:79px;justify-content:space-between;margin:0 20px}
 .element__title{font-size:24px;font-weight:900;line-height:1.21;margin:0;max-width:200px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.element__column{align-items:center;display:flex;flex-direction:column}
 .element__like{background-color:transparent;background-image:url(1ad06e85f169668a1f36.svg);background-repeat:no-repeat;background-size:contain;border:none;height:19px;padding:0;transition:.2s;width:22px}.element__like:hover{cursor:pointer;opacity:.5}
+.element__counter{font-size:13px;font-weight:400;line-height:1.23;margin:3px 0 0}
 .element__like_active{background-color:transparent;background-image:url(b6f9254c1e07adfc969a.png);background-repeat:no-repeat;background-size:contain;border:none;height:19px;padding:0;width:22px}
 .footer{margin:0 auto;max-width:282px}@media screen and (min-width:600px){.footer{margin:0 auto;max-width:581px}}@media screen and (min-width:900px){.footer{margin:0 auto;max-width:880px}}
 .footer__content{color:#545454;font-size:14px;font-weight:400;line-height:1.21;margin:0}@media screen and (min-width:900px){.footer__content{font-size:18px;line-height:1.22}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;display:flex;justify-content:center;left:0;min-width:320px;opacity:0;position:fixed;right:0;top:0;transition:visibility .5s,opacity .5s linear;visibility:hidden;z-index:1}
 .popup_opened{opacity:1;visibility:visible}
-.popup__container{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);min-height:322px;position:relative;width:282px;z-index:2}@media screen and (min-width:600px){.popup__container{min-height:330px;width:430px}}
+.popup__container{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);padding:25px 22px;position:relative;width:238px;z-index:2}@media screen and (min-width:600px){.popup__container{padding:34px 36px 37px;width:358px}}
 .popup__close{background-color:transparent;background-image:url(b793e07c3f4c19e26c11.svg);background-repeat:no-repeat;background-size:contain;border:none;height:20px;padding:0;position:absolute;right:0;top:-36px;transition:.2s;width:20px}@media screen and (min-width:600px){.popup__close{height:32px;right:-40px;top:-40px;width:32px}}.popup__close:hover{cursor:pointer;opacity:.6}
-.popup__wrapper{margin:25px auto;max-width:238px;position:relative}@media screen and (min-width:600px){.popup__wrapper{margin:34px auto 37px;max-width:358px}}
+.popup__wrapper{max-width:238px;position:relative}@media screen and (min-width:600px){.popup__wrapper{max-width:358px}}
 .popup__definition{font-size:18px;font-weight:900;line-height:1.22;margin:0 0 72px}@media screen and (min-width:600px){.popup__definition{font-size:24px;line-height:1.21;margin:0 0 45px}}
+.popup__definition_delete{margin:0 0 38px}@media screen and (min-width:600px){.popup__definition_delete{margin:0 0 38px}}
 .popup__text{border:none;border-bottom:.5px solid rgba(0,0,0,.2);font-size:14px;font-weight:400;height:14px;line-height:1.21;overflow:hidden;padding:0 0 13px;text-overflow:ellipsis;white-space:nowrap;width:100%}.popup__text:first-of-type{margin-bottom:27px}
 .popup__text_type_error{border-bottom:1px solid red}
 .popup__text-error{color:red;font-size:12px;font-weight:400;left:0;line-height:1.25;position:absolute;top:183px;width:100%}.popup__text-error:first-of-type{top:127px}@media screen and (min-width:600px){.popup__text-error{top:164px}.popup__text-error:first-of-type{top:107px}}
 .popup__submit{background:#000;border-radius:2px;color:#fff;font-size:14px;font-weight:400;height:46px;line-height:1.21;margin-top:45px;text-align:center;transition:.2s;width:238px}@media screen and (min-width:600px){.popup__submit{font-size:18px;height:50px;line-height:1.22;margin-top:48px;width:358px}}.popup__submit:not([disabled]):hover{cursor:pointer;opacity:.8}
+.popup__submit_delete{margin-top:0}@media screen and (min-width:600px){.popup__submit_delete{margin-top:0}}
 .popup__submit_inactive{background:#fff;border:1px solid #000;color:#000;opacity:.2}
 .popup_image{background-color:rgba(0,0,0,.9)}
 .popup__image-container{display:flex;flex-direction:column;max-height:75vh;max-width:75vw;position:relative;z-index:2}
