--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,7 +1,7 @@
 .profile__avatar {
-  background-image: url(../../../images/profile-avatar.jpeg);
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   height: 120px;
   width: 120px;
   border-radius: 50%;
