--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -37,6 +37,7 @@
 @import url(../blocks/popup/__definition/_delete/popup__definition_delete.css);
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/__text/_type/popup__text_type_error.css);
+@import url(../blocks/popup/__text/_type/popup__text_type_edit-avatar.css);
 @import url(../blocks/popup/__text-error/popup__text-error.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__submit/_delete/popup__submit_delete);
