--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 .main{margin:42px auto 48px;max-width:282px}@media screen and (min-width:768px){.main{margin:40px auto 67px;max-width:880px}}
 .profile{align-items:center;color:#fff;display:flex;flex-direction:column;justify-content:space-between}@media screen and (min-width:768px){.profile{flex-direction:row;margin:0 34px}}@media screen and (min-width:900px){.profile{margin:0 auto}}
 .profile__avatar-wrapper{height:120px;position:relative;width:120px}
-.profile__avatar{background-image:url(41d09de2e96c52cbba9a.jpeg);background-repeat:no-repeat;background-size:contain;border-radius:50%;height:120px;width:120px}
+.profile__avatar{background-position:50%;background-repeat:no-repeat;background-size:cover;border-radius:50%;height:120px;width:120px}
 .profile__edit-avatar{background-image:url(93c771f5f8582261951d.png);background-position:50%;background-repeat:no-repeat;bottom:0;left:0;opacity:0;position:absolute;right:0;top:0;transition:all .5s}.profile__edit-avatar:hover{background-color:rgba(0,0,0,.8);cursor:pointer;opacity:1}
 .profile__info{align-items:center;display:flex;flex-direction:column;margin:22.25px auto 0;width:100%}@media screen and (min-width:768px){.profile__info{align-items:flex-start;margin:0 auto 0 30px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content}}
 .profile__first-line{align-items:baseline;display:flex;margin-left:28px}@media screen and (min-width:768px){.profile__first-line{margin-left:0}}
@@ -19,7 +19,7 @@
 .elements__list{display:grid;grid-template-columns:282px;grid-template-rows:repeat(6,1fr);justify-content:center;list-style-type:none;margin:0 auto;padding:0;row-gap:20px}@media screen and (min-width:600px){.elements__list{-moz-column-gap:17px;column-gap:17px;grid-template-columns:repeat(2,282px);grid-template-rows:repeat(3,1fr)}}@media screen and (min-width:900px){.elements__list{grid-template-columns:repeat(3,282px);grid-template-rows:repeat(2,1fr)}}
 .element{background-color:#fff;border-radius:10px;margin:0;position:relative;width:100%}
 .element__trash{background-color:transparent;background-image:url(823b0cf1b0b7e9cb7cad.svg);background-repeat:no-repeat;background-size:contain;border:none;height:19px;padding:0;position:absolute;right:20px;top:20px;transition:.2s;width:18px}.element__trash:hover{cursor:pointer;opacity:.6}
-.element__photo{border-radius:10px 10px 0 0;display:block;height:282px;width:282px}
+.element__photo{border-radius:10px 10px 0 0;display:block;height:282px;-o-object-fit:cover;object-fit:cover;width:282px}
 .element__title-container{align-items:center;display:flex;height:79px;justify-content:space-between;margin:0 20px}
 .element__title{font-size:24px;font-weight:900;line-height:1.21;margin:0;max-width:200px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .element__column{align-items:center;display:flex;flex-direction:column}
@@ -37,6 +37,7 @@
 .popup__definition_delete{margin:0 0 38px}@media screen and (min-width:600px){.popup__definition_delete{margin:0 0 38px}}
 .popup__text{border:none;border-bottom:.5px solid rgba(0,0,0,.2);font-size:14px;font-weight:400;height:14px;line-height:1.21;overflow:hidden;padding:0 0 13px;text-overflow:ellipsis;white-space:nowrap;width:100%}.popup__text:first-of-type{margin-bottom:27px}
 .popup__text_type_error{border-bottom:1px solid red}
+.popup__text_type_edit-avatar:first-of-type{margin-bottom:0}
 .popup__text-error{color:red;font-size:12px;font-weight:400;left:0;line-height:1.25;position:absolute;top:183px;width:100%}.popup__text-error:first-of-type{top:127px}@media screen and (min-width:600px){.popup__text-error{top:164px}.popup__text-error:first-of-type{top:107px}}
 .popup__submit{background:#000;border-radius:2px;color:#fff;font-size:14px;font-weight:400;height:46px;line-height:1.21;margin-top:45px;text-align:center;transition:.2s;width:238px}@media screen and (min-width:600px){.popup__submit{font-size:18px;height:50px;line-height:1.22;margin-top:48px;width:358px}}.popup__submit:not([disabled]):hover{cursor:pointer;opacity:.8}
 .popup__submit_delete{margin-top:0}@media screen and (min-width:600px){.popup__submit_delete{margin-top:0}}
